--- a/MyEvernoteSolution/MyEvernote.WebApp/Views/Home/ShowProfile.cshtml
+++ b/MyEvernoteSolution/MyEvernote.WebApp/Views/Home/ShowProfile.cshtml
@@ -24,8 +24,30 @@
             <br />
             <h5><b>@Html.DisplayNameFor(model => model.Username) : </b>@Model.Username</h5>
             <h5><b>@Html.DisplayNameFor(model => model.Email) : </b>@Model.Email</h5>
+            <h5><b>@Html.DisplayNameFor(model => model.Name) : </b>@Model.Name</h5>
+            <h5><b>@Html.DisplayNameFor(model => model.Surname) : </b>@Model.Surname</h5>
             <br />
-            <h5><a href="#">More... </a></h5>
+        </div>
+
+        <div class="col-md-2 text-right">
+            <div class="btn-group">
+                <a class="btn dropdown-toggle btn-info" data-toggle="dropdown" href="#" >
+                <span class="glyphicon glyphicon-cog">&nbsp;</span>
+                Options
+                @*<span class="icon-cog icon-white ">*@</span><span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu" >
+                    <li>
+                        <a href="@Url.Action("EditProfile")"><span class="glyphicon glyphicon-edit">&nbsp;</span>Modify</a>
+                    </li>
+                    <li>
+                        <a href="@Url.Action("RemoveProfile")" onclick="return confirm('are you sure remove this account?')";><span class="glyphicon glyphicon-trash">&nbsp;</span>Delete</a>
+                    </li>
+
+                </ul>
+                
+            </div>
+            
         </div>
 
     </div>
