--- a/MyEvernoteSolution/MyEvernote.WebApp/Views/Category/Index.cshtml
+++ b/MyEvernoteSolution/MyEvernote.WebApp/Views/Category/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<MyEvernote.Entities.Category>
-
+@*category index*@
 @{
     ViewBag.Title = "Kategoriler";
 }
 <div class="row">
     <div class="col-md-10 col-md-offset-1">
-        <h2>Index</h2><hr />
+        <h2>Index //Delete=>ilişkili satırlar silinicek</h2><hr />
     </div>
 </div>
 <div class="row">
