--- a/MyEvernoteSolution/MyEvernote.WebApp/Views/Home/Index.cshtml
+++ b/MyEvernoteSolution/MyEvernote.WebApp/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@using MyEvernote.Entities
 @model  List<Note>
+@*home index*@
 <!-- bütün sayfanın container ı -->
 <div class="container">
-
+    
     <div class="row">
         @*Kategoriler Sekmesi*@
         <div class="col-md-3">
