--- a/MyEvernoteSolution/MyEvernote.WebApp/Views/Note/Create.cshtml
+++ b/MyEvernoteSolution/MyEvernote.WebApp/Views/Note/Create.cshtml
@@ -1,7 +1,6 @@
 ﻿@model MyEvernote.Entities.Note
 
 @{
-    Layout = null;
 }
 
 <!DOCTYPE html>
@@ -36,7 +35,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Text, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Text, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextAreaFor(model => model.Text,5,30, new { @class = "form-control" } )
                     @Html.ValidationMessageFor(model => model.Text, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -48,14 +47,6 @@
                         @Html.EditorFor(model => model.IsDraft)
                         @Html.ValidationMessageFor(model => model.IsDraft, "", new { @class = "text-danger" })
                     </div>
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.LikeCount, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.LikeCount, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.LikeCount, "", new { @class = "text-danger" })
                 </div>
             </div>
     
@@ -75,29 +66,7 @@
                 </div>
             </div>
     
-            <div class="form-group">
-                @Html.LabelFor(model => model.CratedOn, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.CratedOn, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.CratedOn, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.ModifiedOn, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.ModifiedOn, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.ModifiedOn, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.ModifiedUsername, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.ModifiedUsername, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.ModifiedUsername, "", new { @class = "text-danger" })
-                </div>
-            </div>
+            
     
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
