--- a/MyEvernoteSolution/MyEvernote.WebApp/Views/Shared/_Layout.cshtml
+++ b/MyEvernoteSolution/MyEvernote.WebApp/Views/Shared/_Layout.cshtml
@@ -58,15 +58,15 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Yönetim <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="/Note/Create"><span class="glyphicon glyphicon-plus"></span>Not Ekle</a></li>
+                                <li><a href="/Note/Index"><span class="glyphicon glyphicon-list"></span>Notlarım</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li><a href="/Note/MyNotes"><span class="glyphicon glyphicon-list"></span>Notlarım</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="/Note/MyLikedNotes"><span class="glyphicon glyphicon-heart"></span>Beğeniler</a></li>
-                                <li role="separator" class="divider"></li>
+                                <li><a href="/Note/LikeIndex"><span class="glyphicon glyphicon-heart"></span>Beğeniler</a></li>
                                 @if (user.IsAdmin)
                                 {
-                                <li><a href="/Category/Create"><span class="glyphicon glyphicon-plus-sign"></span>Kategori Ekle</a></li>
                                 <li role="separator" class="divider"></li>
+                                <li><a href="/User/Index"><span class="glyphicon glyphicon-user"></span>Kullanıcılar</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="/Category/Create"><span class="glyphicon glyphicon-plus-sign"></span>Kategori Ekle</a></li>
                                 <li><a href="/Category/Index"><span class="glyphicon glyphicon-th-list"></span>Kategori Listele</a></li>
                                 }
                             </ul>
