--- a/MyEvernoteSolution/MyEvernote.WebApp/Views/User/Delete.cshtml
+++ b/MyEvernoteSolution/MyEvernote.WebApp/Views/User/Delete.cshtml
@@ -1,6 +1,7 @@
-﻿@model MyEvernote.Entities.Note
+﻿@model MyEvernote.Entities.EvernoteUser
 
 @{
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -13,55 +14,79 @@
 <body>
     <h3>Are you sure you want to delete this?</h3>
     <div>
-        <h4>Note</h4>
+        <h4>EvernoteUser</h4>
         <hr />
         <dl class="dl-horizontal">
             <dt>
-                @Html.DisplayNameFor(model => model.Category.Title)
+                @Html.DisplayNameFor(model => model.Name)
             </dt>
     
             <dd>
-                @Html.DisplayFor(model => model.Category.Title)
+                @Html.DisplayFor(model => model.Name)
             </dd>
     
             <dt>
-                @Html.DisplayNameFor(model => model.Title)
+                @Html.DisplayNameFor(model => model.Surname)
             </dt>
     
             <dd>
-                @Html.DisplayFor(model => model.Title)
+                @Html.DisplayFor(model => model.Surname)
             </dd>
     
             <dt>
-                @Html.DisplayNameFor(model => model.Text)
+                @Html.DisplayNameFor(model => model.Username)
             </dt>
     
             <dd>
-                @Html.DisplayFor(model => model.Text)
+                @Html.DisplayFor(model => model.Username)
             </dd>
     
             <dt>
-                @Html.DisplayNameFor(model => model.IsDraft)
+                @Html.DisplayNameFor(model => model.Email)
             </dt>
     
             <dd>
-                @Html.DisplayFor(model => model.IsDraft)
+                @Html.DisplayFor(model => model.Email)
             </dd>
     
             <dt>
-                @Html.DisplayNameFor(model => model.LikeCount)
+                @Html.DisplayNameFor(model => model.Password)
             </dt>
     
             <dd>
-                @Html.DisplayFor(model => model.LikeCount)
+                @Html.DisplayFor(model => model.Password)
             </dd>
     
             <dt>
-                @Html.DisplayNameFor(model => model.ImagePath)
+                @Html.DisplayNameFor(model => model.ProfileImageFilename)
             </dt>
     
             <dd>
-                @Html.DisplayFor(model => model.ImagePath)
+                @Html.DisplayFor(model => model.ProfileImageFilename)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.IsActive)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.IsActive)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.ActivateGuid)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.ActivateGuid)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.IsAdmin)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.IsAdmin)
             </dd>
     
             <dt>
