--- a/MyEvernoteSolution/MyEvernote.WebApp/Views/Category/Edit.cshtml
+++ b/MyEvernoteSolution/MyEvernote.WebApp/Views/Category/Edit.cshtml
@@ -13,7 +13,7 @@
     <div class="form-horizontal">
         <h4>Category</h4>
         <hr />
-        @Html.ValidationSummary(false)
+        @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
