--- a/MyEvernoteSolution/MyEvernote.WebApp/Views/Shared/_Layout.cshtml
+++ b/MyEvernoteSolution/MyEvernote.WebApp/Views/Shared/_Layout.cshtml
@@ -107,7 +107,7 @@
                                 <a href="@Url.Action("EditProfile")"><span class="glyphicon glyphicon-edit">&nbsp;</span>Profili Düzenle</a>
                             </li>
                             <li>
-                                <a href="@Url.Action("RemoveProfile")" onclick="return confirm('are you sure remove this account?')" ;><span class="glyphicon glyphicon-trash">&nbsp;</span>Profili Sil</a>
+                                <a href="@Url.Action("RemoveProfile")" onclick="return confirm('are you sure remove this account?')"><span class="glyphicon glyphicon-trash">&nbsp;</span>Profili Sil</a>
                             </li>
                         </ul>
                     </li>
@@ -123,7 +123,7 @@
         <!-- /.container -->
     </nav>
    
-    @RenderBody();
+    @RenderBody()
 
     <!-- /Footer's.container -->
     <div class="container">
